feat: update Modal component

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/variables.scss';
 .modal--root {
   width: 100%;
   height: 100%;
@@ -33,8 +34,46 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 100px;
+    padding: 0 15%;
     line-height: 28px;
+  }
+
+  &[data-bg='react'] {
+    --url: url('/icon/react-logo.png');
+    --filter: blur(20px);
+  }
+  &[data-bg='auto'] {
+    --url: url('/image/roadster.jpg');
+    --background-position: 50% 50%;
+    --filter: blur(15px);
+  }
+  &[data-bg='invest'] {
+    --url: url('/image/wallstreet.webp');
+    --background-position: 50% 50%;
+    --filter: blur(20px);
+  }
+  &[data-bg='ta'] {
+    --url: url('/image/ac.webp');
+    --filter: blur(10px);
+  }
+  &[data-bg='share'] {
+    --url: url('/image/sharing.webp');
+    --background-position: 50% 0;
+    --filter: blur(20px);
+  }
+  &[data-bg='movie'] {
+    --url: url('/image/inception.webp');
+    --background-position: 65% 0;
+    --filter: blur(15px);
+  }
+  &[data-bg='share'] {
+    --url: url('/image/sharing.webp');
+    --filter: blur(10px);
+  }
+  &[data-bg='info']::before {
+    background-image: $bg;
+    --first-gradient-coords: -5% 13%;
+    --second-gradient-coords: 140% 35%;
   }
 
   &::before {
@@ -42,14 +81,15 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('/icon/react-logo.png') no-repeat;
+    background: var(--url);
     background-size: cover;
     overflow: hidden;
     -webkit-filter: blur(25px);
     -moz-filter: blur(25px);
     -o-filter: blur(25px);
     -ms-filter: blur(25px);
-    filter: blur(25px);
+    filter: var(--filter);
+    background-position: var(--background-position);
     // -webkit-transform: scale(1.2, 1.2);
     // -moz-transform: scale(1.2, 1.2);
     // -o-transform: scale(1.2, 1.2);
