feat: update Card style

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -16,6 +16,7 @@
   align-items: center;
   flex-direction: column;
   position: relative;
+  cursor: pointer;
 
   .card--image {
     display: flex;
