--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -18,6 +18,14 @@
   position: relative;
   cursor: pointer;
 
+  transform: scale(1);
+  transition: 1s;
+
+  &:hover {
+    transform: scale(1.15);
+    transition: 0.5s;
+  }
+
   .card--image {
     display: flex;
     flex-direction: column;
