--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,12 +15,10 @@ body {
 html {
   display: flex;
   justify-content: center;
-  scrollbar-width: none;
 }
 
 body {
   max-width: 800px;
-  scrollbar-width: none;
   -ms-overflow-style: none;
 }
 
@@ -35,9 +33,18 @@ a {
 
 #container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: #fff;
   position: relative;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
+
+.block {
+  height: 100vh;
+  padding: 0 16px;
+  scroll-snap-align: start;
 }
 
 .modal-content {
@@ -163,11 +170,6 @@ a {
 #intro-content {
   width: 100%;
   min-height: 800px;
-}
-
-.block {
-  height: 100vh;
-  padding: 0 16px;
 }
 
 #cover,
