--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,26 +65,26 @@ a {
   justify-content: center;
 }
 
-.modal-dialog {
-  .modal-content {
-    &::before {
-      content: '';
-      position: absolute;
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      background-image: url('https://images.unsplash.com/photo-1538370965046-79c0d6907d47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');
-      overflow: hidden;
-      -webkit-filter: blur(30px);
-      -moz-filter: blur(30px);
-      -o-filter: blur(30px);
-      -ms-filter: blur(30px);
-      filter: blur(30px);
-      background-position: center center;
-      background-repeat: no-repeat;
-    }
-  }
-}
+// .modal-dialog {
+//   .modal-content {
+//     &::before {
+//       content: '';
+//       position: absolute;
+//       object-fit: cover;
+//       width: 100%;
+//       height: 100%;
+//       background-image: url('https://images.unsplash.com/photo-1538370965046-79c0d6907d47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');
+//       overflow: hidden;
+//       -webkit-filter: blur(30px);
+//       -moz-filter: blur(30px);
+//       -o-filter: blur(30px);
+//       -ms-filter: blur(30px);
+//       filter: blur(30px);
+//       background-position: center center;
+//       background-repeat: no-repeat;
+//     }
+//   }
+// }
 
 .modal-header {
   border: 0px;
