feat: update font color

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,7 +31,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  // text-decoration: none;
 }
 
 * {
@@ -41,7 +41,7 @@ a {
 #container {
   width: 100%;
   height: 100vh;
-  color: #fff;
+  color: #f6f7f9;
 }
 
 .block {
