feat: add further information section

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -113,10 +113,10 @@ a {
   align-items: center;
 }
 
-#footer {
+#further-info {
   height: 100vh;
   display: flex;
-  align-items: end;
+  align-items: center;
 }
 
 .further-icon {
