feat: update RWD by language

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -70,6 +70,9 @@ a {
       font-size: 3em;
       line-height: 1em;
     }
+    .title:lang(en) {
+      font-size: 1.75em;
+    }
     .subtitle {
       padding-top: 0.75em;
       font-size: 1.25em;
