chore: change icon and image folder path

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -84,7 +84,7 @@ a {
     .photo {
       min-width: 150px;
       min-height: 150px;
-      background: url('../public/image/me.webp');
+      background: url('../src/assets/image/me.webp');
       background-position: 0% 125%;
       background-repeat: no-repeat;
       background-size: cover;
