--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -84,12 +84,18 @@ a {
     .photo {
       min-width: 150px;
       min-height: 150px;
-      background: url('../src/assets/image/me.webp');
-      background-position: 0% 125%;
+      margin-right: 20px;
+      border-radius: 50%;
+      background: url('https://i.imgur.com/1eWvhJal.jpg?1');
+      background-position: 45% 0;
       background-repeat: no-repeat;
       background-size: cover;
-      border-radius: 50%;
-      margin-right: 20px;
+      @media (min-width: 768px) {
+        background: url('https://i.imgur.com/1eWvhJah.jpg?1');
+        background-position: 45% 0;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
     }
   }
 
