feat: update timeline content style

--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -30,8 +30,8 @@
 .content {
   p {
     font-size: 14px;
+    font-weight: 200;
     text-align: justify;
-    text-justify: distribute;
     max-width: 400px;
   }
 }
