feat: add Loader in index page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,7 +34,7 @@ a {
   right: 1em;
   z-index: 10;
   color: #f6f7f9;
-  }
+}
 
 .block {
   height: 100vh;
@@ -117,4 +117,40 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#loading-mask {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.page {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+}
+
+.page-enter {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.page-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.page-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 300ms, transform 300ms;
 }
