feat: update switch active color

--- a/src/components/switch/switch.module.scss
+++ b/src/components/switch/switch.module.scss
@@ -8,13 +8,13 @@
 
   &:lang(zh) .switch--zh {
     text-shadow: $text-glow;
-    color: #fff;
+    color: #3cc3e8;
     font-weight: 600;
   }
 
   &:lang(en) .switch--en {
     text-shadow: $text-glow;
-    color: #fff;
+    color: #3cc3e8;
     font-weight: 600;
   }
 }
