--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,3 +10,35 @@ $bg: radial-gradient(
     rgba(138, 41, 129, 0.7),
     transparent
   );
+
+@mixin web3-flow-effect {
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200%;
+  background-color: rgb(189, 0, 255);
+  background-image: linear-gradient(
+    90deg,
+    rgb(0, 163, 255) 0%,
+    rgb(189, 0, 255) 50%,
+    rgb(0, 163, 255) 100%
+  );
+  animation: 3s ease-in-out 0s infinite normal none running flow;
+  @keyframes flow {
+    0% {
+      background-position-x: 0%;
+    }
+    100% {
+      background-position-x: -200%;
+    }
+  }
+  // animation-duration: 3s;
+  // animation-timing-function: ease-in-out;
+  // animation-delay: 0s;
+  // animation-iteration-count: infinite;
+  // animation-direction: normal;
+  // animation-fill-mode: none;
+  // animation-play-state: running;
+  // animation-name: flow;
+}
