--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -140,35 +140,14 @@ a {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 1.5em;
-      margin-bottom: 1em;
+      margin-bottom: 2.5em;
       font-size: 0.75em;
       font-weight: 400;
       transition: 300ms;
       text-decoration: none;
     }
     @media screen and (min-width: 600px) {
-      a:hover {
-        color: #3cc3e8;
-        transition: 300ms;
-      }
-      a:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        transform: scaleX(0);
-        height: 1px;
-        top: 33px;
-        left: 0;
-        background-color: #3cc3e8;
-        transform-origin: bottom right;
-        transition: transform 0.2s ease-out;
-      }
-
-      a:hover:after {
-        transform: scaleX(1);
-        transform-origin: bottom left;
-      }
+      @include speed-underscore-effect(0, 0);
     }
   }
 }
