feat: apply new color

--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -13,9 +13,10 @@
 }
 
 .company-name {
+  color: #000;
   width: fit-content;
   position: relative;
-  @include speed-underscore-effect(0, 0);
+  @include speed-underscore-effect(0, 0, #000);
 }
 
 .period {
