--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,24 +25,21 @@ a {
   box-sizing: border-box;
 }
 
+body {
+  > .MuiPopover-root {
+    .MuiPaper-root {
+      li {
+        font-size: 0.75rem;
+      }
+    }
+  }
+}
+
 #container {
   width: 100%;
   height: 100vh;
   color: #f6f7f9;
-}
-
-#menu-button {
-  position: fixed;
-  top: 1em;
-  right: 1em;
-  z-index: 10;
-  color: #f6f7f9;
-}
-
-.section {
-  &[data-bg='yellow'] {
-    color: #333;
-  }
+  position: relative;
 }
 
 .block {
